[gd_scene load_steps=8 format=3]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_jrx8h"]
[ext_resource type="Script" path="res://scripts/player.gd" id="2_s9k4n"]
[ext_resource type="PackedScene" path="res://scenes/ui/touch_controls.tscn" id="3_9p8m0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_a2vfy"]
radius = 32.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fuel_bg"]
bg_color = Color(0.13, 0.08, 0.15, 0.76)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.43, 0.29, 0.52, 0.9)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fuel_fill"]
bg_color = Color(0.5, 0.93, 0.47, 0.85)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
shadow_color = Color(0.19, 0.32, 0.14, 0.65)
shadow_size = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_game_over"]
bg_color = Color(0.07, 0.04, 0.09, 0.94)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.49, 0.33, 0.63, 0.95)
shadow_color = Color(0.12, 0.06, 0.2, 0.8)
shadow_size = 8

[node name="Main" type="Node2D"]
script = ExtResource("1_jrx8h")

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(576, 324)
script = ExtResource("2_s9k4n")
touch_controls_path = NodePath("../HUD/TouchControls")

[node name="BabyBody" type="Polygon2D" parent="Player"]
color = Color(0.98, 0.82, 0.7, 1)
polygon = PackedVector2Array(0, -34, 26, -22, 32, 0, 24, 28, 0, 38, -24, 28, -32, 0, -26, -22)

[node name="Diaper" type="Polygon2D" parent="Player"]
position = Vector2(0, 10)
color = Color(0.95, 0.96, 1, 1)
polygon = PackedVector2Array(-26, -6, 26, -6, 22, 18, -22, 18)

[node name="DiaperStripe" type="Polygon2D" parent="Player"]
position = Vector2(0, 16)
color = Color(0.69, 0.79, 1, 1)
polygon = PackedVector2Array(-18, -2, 18, -2, 14, 4, -14, 4)

[node name="Head" type="Polygon2D" parent="Player"]
position = Vector2(0, -32)
color = Color(0.99, 0.85, 0.72, 1)
polygon = PackedVector2Array(0, -18, 16, -8, 18, 10, 0, 18, -18, 10, -16, -8)

[node name="Curl" type="Line2D" parent="Player"]
position = Vector2(0, -48)
points = PackedVector2Array(-6, -4, 0, -8, 6, -4, 2, 0, -2, 4)
width = 2.5
default_color = Color(0.23, 0.18, 0.12, 1)
antialiased = true

[node name="CheekLeft" type="Polygon2D" parent="Player"]
position = Vector2(-10, -30)
color = Color(1, 0.66, 0.66, 0.8)
polygon = PackedVector2Array(-6, -2, 0, -4, 6, -1, 4, 4, -2, 4)

[node name="CheekRight" type="Polygon2D" parent="Player"]
position = Vector2(10, -30)
color = Color(1, 0.66, 0.66, 0.8)
polygon = PackedVector2Array(-6, -2, 0, -4, 6, -1, 4, 4, -2, 4)

[node name="FartCloud" type="Node2D" parent="Player"]
scale = Vector2(0.6, 0.6)
visible = false

[node name="CloudCore" type="Polygon2D" parent="Player/FartCloud"]
color = Color(0.6, 0.93, 0.54, 0.8)
polygon = PackedVector2Array(-14, -6, -4, -14, 8, -10, 14, 0, 4, 12, -10, 10)

[node name="CloudPuff" type="Polygon2D" parent="Player/FartCloud"]
position = Vector2(-12, 4)
color = Color(0.45, 0.82, 0.39, 0.8)
polygon = PackedVector2Array(-12, -8, 0, -12, 12, -4, 10, 8, -2, 12, -14, 4)

[node name="TurboAura" type="Node2D" parent="Player"]
visible = false

[node name="AuraCore" type="Polygon2D" parent="Player/TurboAura"]
color = Color(1, 0.88, 0.46, 0.7)
polygon = PackedVector2Array(-30, -6, -12, -30, 12, -28, 30, -4, 20, 26, -6, 30, -26, 6)

[node name="AuraRing" type="Line2D" parent="Player/TurboAura"]
width = 5.0
antialiased = true
points = PackedVector2Array(0, -36, 32, -10, 28, 24, 0, 36, -28, 24, -32, -8, 0, -36)
default_color = Color(1, 0.56, 0.21, 0.55)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("CircleShape2D_a2vfy")

[node name="HUD" type="CanvasLayer" parent="."]
layer = 1

[node name="TouchControls" parent="HUD" instance=ExtResource("3_9p8m0")]

[node name="Margin" type="MarginContainer" parent="HUD"]
offset_left = 20.0
offset_top = 20.0
offset_right = 20.0
offset_bottom = 20.0

[node name="VBox" type="VBoxContainer" parent="HUD/Margin"]
offset_right = 240.0
offset_bottom = 120.0
theme_override_constants/separation = 12

[node name="FuelBar" type="ProgressBar" parent="HUD/Margin/VBox"]
custom_minimum_size = Vector2(220, 36)
value = 50.0
step = 0.01
show_percentage = false
theme_override_styles/fill = SubResource("StyleBoxFlat_fuel_fill")
theme_override_styles/background = SubResource("StyleBoxFlat_fuel_bg")

[node name="Label" type="Label" parent="HUD/Margin/VBox/FuelBar"]
offset_left = 16.0
offset_top = 6.0
offset_right = 204.0
offset_bottom = 30.0
text = "Fart Fuel: 100/100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="HUD/Margin/VBox"]
custom_minimum_size = Vector2(220, 28)
text = "Score: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TurboMeter" type="HBoxContainer" parent="HUD/Margin/VBox"]
custom_minimum_size = Vector2(220, 36)
alignment = 1
theme_override_constants/separation = 6

[node name="Icon" type="Label" parent="HUD/Margin/VBox/TurboMeter"]
custom_minimum_size = Vector2(32, 32)
text = "â˜…"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TurboValue" type="Label" parent="HUD/Margin/VBox/TurboMeter"]
text = "x0"
horizontal_alignment = 0
vertical_alignment = 1
custom_minimum_size = Vector2(60, 32)

[node name="GameOverPanel" type="PanelContainer" parent="HUD"]
visible = false
offset_left = 376.0
offset_top = 194.0
offset_right = 776.0
offset_bottom = 454.0
theme_override_styles/panel = SubResource("StyleBoxFlat_game_over")

[node name="VBox" type="VBoxContainer" parent="HUD/GameOverPanel"]
offset_left = 20.0
offset_top = 20.0
offset_right = 380.0
offset_bottom = 240.0
theme_override_constants/separation = 18
alignment = 1

[node name="Title" type="Label" parent="HUD/GameOverPanel/VBox"]
custom_minimum_size = Vector2(300, 40)
text = "Out of Gas!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FinalScore" type="Label" parent="HUD/GameOverPanel/VBox"]
custom_minimum_size = Vector2(300, 30)
text = "Final Score: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="Button" parent="HUD/GameOverPanel/VBox"]
custom_minimum_size = Vector2(220, 44)
text = "Restart"
